@@ -70,7 +70,8 @@ TITLE = envini.get('title', MAPENTITY_CONFIG['TITLE'])
 MAPENTITY_CONFIG['TITLE'] = TITLE
 MAPENTITY_CONFIG['ROOT_URL'] = ROOT_URL
 MAPENTITY_CONFIG['LANGUAGE_CODE'] = LANGUAGE_CODE
-MAPENTITY_CONFIG['LANGUAGES'] = _MODELTRANSLATION_LANGUAGES
+MAPENTITY_CONFIG['LANGUAGES'] = LANGUAGES
+MAPENTITY_CONFIG['TRANSLATED_LANGUAGES'] = _MODELTRANSLATION_LANGUAGES
 
 
 #
