@@ -6,6 +6,7 @@ CHANGELOG
 -------------------
 
 * Fix compilation of translations (ref #970)
+* Fix distinction between languages and translated languages (fixes #968)
 
 0.22.4 (2014-03-06)
 -------------------
